Fix issue where if the tweet was too long the text would continue on a singular line; now goes on next line if too long

--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -20,7 +20,9 @@
   border-top: hidden;
   border-right: hidden;
   border-left: hidden;
-  border-color: white;
+  border-color: white; 
+  white-space: pre-wrap;
+  overflow-wrap: break-word;
 }
 
 .tweet-button {
